<resources>
    <string name="app_name">CaddieApp</string>
    <string name="login">Ingreso</string>
    <string name="login_golfista">Ingresar como Golfista</string>
    <string name="login_caddie_master">Ingresar como Caddie Master</string>
    <string name="register">Registrarse</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="celular">Celular:</string>
    <string name="registrar_caddie">Registrar Caddie</string>
    <string name="siguiente">Siguiente</string>
    <string name="categoria">Categoria:</string>
    <string name="foto_caddie">Foto Caddie</string>
    <string name="subir_foto">Subir Foto</string>
    <string name="eliminar">Eliminar</string>
    <string name="disponible">Disponible</string>
    <string name="estado">Estado:</string>
    <string name="informacion_caddie">Información Caddie</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="alias">Alias:</string>
    <string name="edad">Edad:</string>
    <string name="editar">Editar</string>
    <string name="bienvenido_caddie_master">Bienvenido Caddie Master</string>
    <string name="ver_reservas">Ver Reservas</string>
    <string name="ver_caddies">Ver Caddies</string>
    <string name="nombre_golfista">TextView</string>
    <string name="no_carn">No. Carné:</string>
    <string name="textviewCarne">TextView</string>
    <string name="textviewEdad">TextView</string>
    <string name="reservar_caddie">Reservar Caddie</string>
    <string name="ver_reservas_vigentes">Ver Reservas Vigentes</string>
    <string name="imagen_golfista">Imagen de perfil para el Golfista</string>
    <string name="textview_nombrecaddie">Carlos Javier</string>
    <string name="textview_apellidoscaddie">Gomez Aguilar</string>
    <string name="textview_aliascaddie">Pez</string>
    <string name="textview_edadcaddie">22 Años</string>
    <string name="textview_categoriacaddie">Tercera</string>
    <string name="reservar">reservar</string>
    <string name="textview_infoReserva">Información Reserva</string>
    <string name="caddie">Caddie:</string>
    <string name="nombre_caddie">Carlos Javier Gomez Aguilar</string>
    <string name="estado_reserva">Pendiente</string>
    <string name="imagebutton_eliminarReserva">Imagebutton para eliminar la reserva</string>
    <string name="imageview_fotomaster">Foto de perfil del caddie master</string>
    <string name="golfista">Golfista:</string>
    <string name="tiger_woods">Tiger Woods</string>
    <string name="imageview_description_eliminar_reserva">Imageview para eliminar la reserva</string>
    <string name="textview_rechazar">Rechazar</string>
    <string name="aceptar_reserva">Aceptar reserva</string>
    <string name="aceptar">Aceptar</string>
    <string name="imagebutton_callmaster">ImageButton para llamar al caddie desde el caddie master</string>
    <string name="imageview_editarcaddie">Imageview para editar la información de un caddie</string>
    <string name="imageview_eliminarcaddie">imageview para eliminar un caddie</string>
    <string name="nombreshint">Nombres</string>
    <string name="aliashint">Alias</string>
    <string name="description_imageviewfotocaddiesubir">ImageView para subir foto del caddie a registrar</string>
    <string name="_18">18</string>
    <string name="celhint">Introduce your phone number</string>
    <string name="primera">Primera</string>
    <string name="segunda">Segunda</string>
    <string name="ocupado">Ocupado</string>
    <string name="pfc">PFC</string>
    <string name="registrar">REGISTRAR</string>
    <string name="borrar">Borrar</string>
    <string name="ver_informaci_n_caddie">Ver información caddie</string>
    <string name="Reservar">Reservar</string>
</resources>
