<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarCaddieEdad">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <SeekBar
            android:id="@+id/seekBarAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="225dp"
            android:max="85"
            android:progress="18" />

        <TextView
            android:id="@+id/textViewCurrentAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="166dp"
            android:fontFamily="monospace"
            android:text="@string/_18"
            android:textColor="@color/colorAccent"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/textViewEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="195dp"
            android:text="@string/edad" />


    </RelativeLayout>

    <Button
        android:id="@+id/buttonToThirdActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="@string/siguiente"
        android:textColor="#FFF" />

</RelativeLayout>
