<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIngresarGolfista"
        android:layout_width="344dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_golfista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewtitle" />

    <Button
        android:id="@+id/btnIngresarCaddieMaster"
        android:layout_width="344dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_caddie_master"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarGolfista" />

    <Button
        android:id="@+id/buttonURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:text="www.campestrebucaramanga.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarCaddieMaster" />

</android.support.constraint.ConstraintLayout>